<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message6" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message7" />

    <EditText
        android:id="@+id/input_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_message11"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message8" />

    <EditText
        android:id="@+id/input_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_message12"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message9" />


    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message10" />

    <Button
        android:id="@+id/go_to_chat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_go_to_chat" />

    <Button
        android:id="@+id/go_to_weatherForecast_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button_go_to_weatherForecast" />

    <Button
        android:id="@+id/go_to_Toolbar_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button_go_to_Toolbar_page" />


</LinearLayout>