<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:text="@string/text_message" />

    <Button
        android:id="@+id/button1"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/item1" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@id/button1"
        android:text="@string/item2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="147dp"
        android:layout_height="37dp"
        android:layout_below="@id/button1"
        android:layout_alignParentRight="true"
        android:text="@string/item3" />

    <EditText
        android:id="@+id/inputtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:hint="@string/text_message2"
        android:inputType="textPersonName" />


</RelativeLayout>